<resources>
    <string name="app_name">JonesSpencer_CE06</string>
    <string name="title">Async Timer</string>
    <string name="start_button">Start Timer</string>
    <string name="stop_button">Stop Timer</string>
    <string name="timer_started">Timer has started</string>
    <string name="timer_expired">Timer has expired</string>
    <string name="timer_stopped">Timer stopped with %1$d seconds elapsed</string>
    <string name="invalid_time_message">Please enter a valid time</string>
    <string name="editSecs">00</string>
    <string name="editMins">00</string>
    <string name="colon">:</string>
</resources>